@@ -151,7 +151,7 @@ public class NXCSession implements Session, ScriptLibraryManager, UserManager, S
 {
 	// Various public constants
 	public static final int DEFAULT_CONN_PORT = 4701;
-	public static final int CLIENT_PROTOCOL_VERSION = 33;
+	public static final int CLIENT_PROTOCOL_VERSION = 34;
 
 	// Authentication types
 	public static final int AUTH_TYPE_PASSWORD = 0;
